# docs/swagger.json
@@ -12,29 +12,6 @@
     },
     "host": "localhost:3000",
     "paths": {
-        "/": {
-            "get": {
-                "description": "Get the home page.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Home"
-                ],
-                "summary": "get the home page",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/crdt": {
             "get": {
                 "description": "Get all CRDT key-value pairs.",
